--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "IPR",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "app.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc"
   },
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "^5.4.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.17.0",
+    "pg": "^8.16.3",
+    "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6"
+  },
   "devDependencies": {
     "typescript": "^5.5.3"
   },
