--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "mongoose": "^8.17.0",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "typescript": "^5.5.3"
