--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
+    "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
