--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "main": "app.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@types/jest": "^30.0.0",
     "bcrypt": "^6.0.0",
     "chalk": "^5.4.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jest": "^30.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
-    "pg": "^8.16.3",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "ts-jest": "^29.4.1",
   },
   "devDependencies": {
     "typescript": "^5.5.3"
