--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,6 @@
-//{
-//  "compilerOptions": {
-//    "target": "ES2021",
-//    "module": "ESNext",
-//    "esModuleInterop": true,
-//    "forceConsistentCasingInFileNames": true,
-//    "strict": true,
-//    "skipLibCheck": true,
-//    "outDir": "./out",
-//    "rootDir": "./src"
-//  },
-//  "include": ["src"]
-//}
-
-
-
-
 {
   "compilerOptions": {
+    "types": ["jest"],
     "experimentalDecorators": true,
     "target": "ES2021" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
     "module": "ESNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
@@ -27,7 +11,6 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
     "emitDecoratorMetadata": true
-
   },
   "ts-node": {
     "esm": true,
