--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "ts-jest": "^29.4.1",
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "typescript": "^5.5.3"
   },
   "private": true
