--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "esm": true,
     "experimentalSpecifierResolution": "node",
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/tests"]
 }
