--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "pg": "^8.16.3",
+    "pino": "^9.9.5",
+    "pino-pretty": "^13.1.1",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
     "swagger-autogen": "^2.23.7",
