--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pino-pretty": "^13.1.1",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
+    "supertest": "^7.1.4",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
